# civitai-model-manager

./: pyproject.toml
models/: models_endpoint.ts
models/__test__/: test_models_endpoints.test.ts
models/baseModels/: misc.ts
notes/: Blueprint.canvas  Headache.md
notes/.obsidian/: workspace.json
notes/API/: Local-API.canvas
notes/CivitAI/: 基于civitai API实现的模型浏览功能十分有限.md
notes/Logic/Download_models/: How to download file based on json data that returned from CivitAI API..md
notes/program/: API structure.md  Async SQLModel.md  unit of work and temp directory.md
src/civitai_model_manager/: __init__.py  settings.json  startup.py
src/civitai_model_manager/app/: data_model.py  dependencies.py
src/civitai_model_manager/app/api/v1/: __init__.py  file_check.py  gopeed_tasks.py  local_models.py
src/civitai_model_manager/app/db/: civitai_table.py  gopeed_table.py
tests/: db.sqlite3  modeid_data_list.json  model_id.json  test_models.py
web/: Model_Page_Mapping.vsdx  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.vue  components.d.ts  main.ts
web/src/assets/styles/: index.less
web/src/components/: Sidebar.vue
web/src/layout/: index.vue
web/src/layout/components/Sidebar/: index.vue
web/src/models/: creators_endpoint.ts  models_endpoint.ts
web/src/models/__test__/: 500_records.d.ts  load_data_list.ts  test_models_endpoints.test.ts
web/src/router/: index.ts
web/src/views/: AboutView.vue  DownloadsView.vue  HomeView.vue  ModelsView.vue
